--- a/AppTouchTask/Info.plist
+++ b/AppTouchTask/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>youtube</string>
+	</array>
 </dict>
 </plist>
